borsh-derive/src/internals/attributes/field/snapshots/root_bounds_and_wrong_key_combined.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "malformed borsh attribute, expected `borsh(bound(...), deserialize_with = ..., schema(...), serialize_with = ...)`",
)
