borsh-derive/src/internals/attributes/field/snapshots/schema_params_parsing1.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_vec_of_tokenizable(schema_attrs.unwrap().params)
---
T => < T as TraitName > :: Associated

