borsh-derive/src/internals/attributes/field/snapshots/schema_params_parsing_error.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: err
---
Error(
    "expected `>`",
)
