borsh-derive/src/internals/attributes/field/snapshots/schema_with_funcs_parsing-2.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_tokenizable(with_funcs.definitions)
---
third_party_impl :: add_definitions_recursively :: < K , V >

