borsh-derive/src/internals/attributes/field/snapshots/ser_de_with_parsing1.snap
---
source: borsh-derive/src/internals/attributes/field/mod.rs
expression: debug_print_tokenizable(attrs.serialize_with.as_ref())
---
third_party_impl :: serialize_third_party

